[package]
name = "mio_channel"
version = "0.2.0"
edition = "2021"
description = "Provide a wrapper of the standard channel that can be polled with Mio."
authors = ["ohjinsu@codersproduct.com"]
documentation = "https://docs.rs/mio_channel"
repository = "https://github.com/oh-jinsu/mio_channel"
readme = "README.md"
keywords = ["channel", "non-blocking"]
license = "MIT"
include = ["/src", "Cargo.toml", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
mio = { version = "1.0.4", features = ["os-poll", "net"] }
